[gd_scene load_steps=21 format=3 uid="uid://cw5ydqcmaygwe"]

[ext_resource type="Script" path="res://Scripts/Entities/enemy_pistol.gd" id="1_2qlrh"]
[ext_resource type="PackedScene" uid="uid://bhucncys8uksm" path="res://Assets/Models/ps1-psx-style-desert-eagle-lowpoly/source/DesertEaglePS1.glb" id="2_gig6b"]
[ext_resource type="PackedScene" uid="uid://cck7md3v8ajc4" path="res://Assets/Models/hobo_goodrig.glb" id="3_to5ac"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8ixdi"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_p5ujk"]
radius = 0.0
height = 0.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_l6rn8"]
radius = 0.115475
height = 1.15475

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0ksak"]
radius = 0.0322286
height = 0.322286

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_iicgb"]
radius = 0.0365698
height = 0.365698

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_tjrcy"]
radius = 0.0365698
height = 0.365698

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_f8ktw"]
radius = 0.2
height = 1.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_6ffpc"]
radius = 0.0343888
height = 0.343888

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2hi47"]
radius = 0.125753
height = 0.251507

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_q71kv"]
radius = 0.0274949
height = 0.775214

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8qecj"]
radius = 6.69866e-09
height = 6.69866e-08

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_uylrq"]
radius = 0.0274949
height = 0.69917

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_54thh"]
radius = 8.96648e-09
height = 8.96648e-08

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_js8s8"]
radius = 0.04
height = 1.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_p4nxa"]
radius = 0.0143661
height = 0.143661

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_bv3yq"]
radius = 0.04
height = 1.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_c1s63"]
radius = 0.0143661
height = 0.143661

[node name="CharacterBody3D" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 0
collision_mask = 7
script = ExtResource("1_2qlrh")

[node name="EnvironmentCollision" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_8ixdi")

[node name="DesertEaglePS1" parent="EnvironmentCollision" instance=ExtResource("2_gig6b")]
transform = Transform3D(0.0959837, 0.0109561, 0.0258285, -0.0145086, 0.0981781, 0.0122711, -0.0240135, -0.0155257, 0.0958244, -0.0260017, 0.191514, 0.36998)

[node name="Cube" parent="EnvironmentCollision/DesertEaglePS1" index="0"]
transform = Transform3D(0, -0.965926, 0.258819, -1, 0, 0, 0, -0.258819, -0.965926, -1.56693, -1.14, 2.49297)
visible = false

[node name="Cylinder" parent="EnvironmentCollision/DesertEaglePS1" index="1"]
transform = Transform3D(1, 0, 0, 0, 0.866025, -0.5, 0, 0.5, 0.866025, 0, -0.46, 0)

[node name="Cube_003" parent="EnvironmentCollision/DesertEaglePS1" index="4"]
transform = Transform3D(1, 0, 0, 0, 0.866025, -0.5, 0, 0.5, 0.866025, 0, -0.46, 0)

[node name="Cylinder_001" parent="EnvironmentCollision/DesertEaglePS1" index="6"]
visible = false

[node name="Cube_006" parent="EnvironmentCollision/DesertEaglePS1" index="7"]
visible = false

[node name="Cube_007" parent="EnvironmentCollision/DesertEaglePS1" index="8"]
visible = false

[node name="Cube_008" parent="EnvironmentCollision/DesertEaglePS1" index="9"]
visible = false

[node name="Cube_009" parent="EnvironmentCollision/DesertEaglePS1" index="10"]
visible = false

[node name="Cube_010" parent="EnvironmentCollision/DesertEaglePS1" index="11"]
visible = false

[node name="Cylinder_002" parent="EnvironmentCollision/DesertEaglePS1" index="12"]
visible = false

[node name="Cube_011" parent="EnvironmentCollision/DesertEaglePS1" index="13"]
visible = false

[node name="Cylinder_003" parent="EnvironmentCollision/DesertEaglePS1" index="14"]
visible = false

[node name="Cube_005" parent="EnvironmentCollision/DesertEaglePS1" index="15"]
transform = Transform3D(1, 0, 0, 0, 0.866025, -0.5, 0, 0.5, 0.866025, 0, -0.46, 0)

[node name="CasingSpawner" type="Marker3D" parent="EnvironmentCollision/DesertEaglePS1"]
unique_name_in_owner = true
transform = Transform3D(1, -2.98023e-08, -1.04308e-07, 1.86265e-08, 1, 1.49012e-08, -1.04308e-07, -2.98023e-08, 1, -0.0170088, 0.44913, -0.0949011)

[node name="RayCast3D" type="RayCast3D" parent="EnvironmentCollision/DesertEaglePS1"]
transform = Transform3D(0.993619, -0.110991, 0.0200696, 0.10738, 0.876411, -0.46944, 0.0345143, 0.4686, 0.882736, -0.0268309, 0.244481, 0.144358)
target_position = Vector3(0, -1, 30)
collision_mask = 5

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="hobo_goodrig" parent="." instance=ExtResource("3_to5ac")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="Skeleton3D" parent="hobo_goodrig" index="0"]
bones/2/rotation = Quaternion(0.999111, -1.03306e-07, -1.03339e-07, -0.0421676)
bones/4/rotation = Quaternion(0.162047, 0.0211971, 0.014535, 0.986448)
bones/4/scale = Vector3(1, 1, 1)
bones/6/rotation = Quaternion(0.162049, -0.0211972, -0.0145352, 0.986448)
bones/7/rotation = Quaternion(0.996932, -9.95016e-08, -1.06978e-07, 0.078268)
bones/7/scale = Vector3(1, 1, 0.999998)
bones/8/rotation = Quaternion(0.00577128, -1.56101e-11, 1.07857e-13, 0.999983)
bones/8/scale = Vector3(1, 1, 1)
bones/9/rotation = Quaternion(0.167611, 0.00157816, 0.00167714, 0.985851)
bones/10/rotation = Quaternion(-0.0945107, -0.0192517, -0.014829, 0.995227)
bones/10/scale = Vector3(1, 1, 1)
bones/11/scale = Vector3(1, 1, 1)
bones/12/rotation = Quaternion(-0.0132548, 0.0178544, -0.0980355, 0.994934)
bones/12/scale = Vector3(1, 1, 1)
bones/13/enabled = false
bones/13/rotation = Quaternion(0.0303923, -1.73711e-16, -5.31505e-18, 0.999538)
bones/13/scale = Vector3(1, 1, 1)
bones/14/rotation = Quaternion(0.716245, 0.437276, 0.437275, -0.323378)
bones/15/rotation = Quaternion(0.678722, -0.422576, -0.449078, -0.398868)
bones/15/scale = Vector3(1, 1, 1)
bones/16/scale = Vector3(1, 1, 1)
bones/17/enabled = false
bones/17/rotation = Quaternion(0.0303923, -1.73711e-16, -5.31505e-18, 0.999538)
bones/18/rotation = Quaternion(0.716245, -0.437276, -0.437275, -0.323378)
bones/18/scale = Vector3(1, 1, 1)
bones/19/enabled = false
bones/20/rotation = Quaternion(0.836064, -4.45575e-08, 0.244618, -0.49108)
bones/21/rotation = Quaternion(-0.347774, 0.323915, -0.292011, 0.829977)
bones/21/scale = Vector3(1, 1, 1)
bones/23/enabled = false
bones/24/rotation = Quaternion(0.836064, 4.45575e-08, -0.244618, -0.49108)
bones/25/rotation = Quaternion(-0.347774, -0.323915, 0.292011, 0.829977)
bones/25/scale = Vector3(1, 1, 1)

[node name="PhysicalBoneSimulator3D" type="PhysicalBoneSimulator3D" parent="hobo_goodrig/Skeleton3D" index="1"]

[node name="Physical Bone Armature" type="PhysicalBone3D" parent="hobo_goodrig/Skeleton3D/PhysicalBoneSimulator3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00994935, 0, 0)
bone_name = "Armature"

[node name="CollisionShape3D" type="CollisionShape3D" parent="hobo_goodrig/Skeleton3D/PhysicalBoneSimulator3D/Physical Bone Armature"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_p5ujk")

[node name="Physical Bone Base" type="PhysicalBone3D" parent="hobo_goodrig/Skeleton3D/PhysicalBoneSimulator3D"]
transform = Transform3D(1, 0, -2.74216e-08, -2.74216e-08, 0, -1, 0, 1, 0, 0.00994936, 0.577373, 0)
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.577373)
body_offset = Transform3D(1, 0, -2.74216e-08, -2.74216e-08, 0, -1, 0, 1, 0, 1.58325e-08, 0.577373, 0)
mass = 0.01
friction = 0.0
bone_name = "Base"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="hobo_goodrig/Skeleton3D/PhysicalBoneSimulator3D/Physical Bone Base"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_l6rn8")

[node name="Physical Bone Hip" type="PhysicalBone3D" parent="hobo_goodrig/Skeleton3D/PhysicalBoneSimulator3D"]
transform = Transform3D(0.0152136, -0.967722, -0.25156, 0.0842504, -0.249454, 0.964715, -0.996329, -0.0358708, 0.0777359, 0.0504866, 0.999289, -0.0125266)
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.46683e-08, -3.73129e-08, 0.161143)
body_offset = Transform3D(0.0152138, -0.967722, -0.251561, 0, 0.25159, -0.967834, 0.999872, 0.0147243, 0.00382759, 0.0405372, 0.15596, -0.000616804)
bone_name = "Hip"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="hobo_goodrig/Skeleton3D/PhysicalBoneSimulator3D/Physical Bone Hip"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_0ksak")

[node name="Physical Bone Leg_Upper_L" type="PhysicalBone3D" parent="hobo_goodrig/Skeleton3D/PhysicalBoneSimulator3D"]
transform = Transform3D(0.0344855, -0.93246, -0.359624, 0.0197951, -0.35913, 0.933077, -0.999209, -0.0392965, 0.00607331, 0.156781, 0.673219, -0.0261633)
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.33669e-07, -4.9757e-09, 0.182849)
body_offset = Transform3D(0.999987, -2.27243e-07, -1.80444e-06, 4.65661e-09, -2.70957e-08, -1, 0, 1, 2.72121e-08, -3.72529e-09, 0.182849, 0)
bone_name = "Leg_Upper.L"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="hobo_goodrig/Skeleton3D/PhysicalBoneSimulator3D/Physical Bone Leg_Upper_L"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_iicgb")

[node name="Physical Bone Leg_Upper_R" type="PhysicalBone3D" parent="hobo_goodrig/Skeleton3D/PhysicalBoneSimulator3D"]
transform = Transform3D(0.0344856, 0.932459, 0.359626, -0.0197953, -0.359132, 0.933077, 0.999209, -0.0392966, 0.00607342, -0.136882, 0.673219, -0.0261634)
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.30795e-07, -2.04323e-08, 0.182849)
body_offset = Transform3D(0.999988, 2.27243e-07, 1.80909e-06, 2.32831e-09, 9.69594e-08, -1, 7.45058e-09, 1, 1.11744e-07, 0, 0.182849, 0)
bone_name = "Leg_Upper.R"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="hobo_goodrig/Skeleton3D/PhysicalBoneSimulator3D/Physical Bone Leg_Upper_R"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_tjrcy")

[node name="Physical Bone Spine" type="PhysicalBone3D" parent="hobo_goodrig/Skeleton3D/PhysicalBoneSimulator3D"]
transform = Transform3D(1, 5.61824e-11, 1.69536e-11, 1.28489e-11, 0.072271, -0.997385, -5.72607e-11, 0.997385, 0.072271, 0.00994938, 1.25772, -0.00746208)
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.24753e-12, 4.06691e-07, 0.103246)
body_offset = Transform3D(1, -4.83838e-12, 1.20831e-11, 1.28523e-11, -5.96046e-08, -1, 0, 0.99999, -3.86685e-06, 0, 0.103246, -7.45058e-09)
bone_name = "Spine"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="hobo_goodrig/Skeleton3D/PhysicalBoneSimulator3D/Physical Bone Spine"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_f8ktw")

[node name="Physical Bone Chest" type="PhysicalBone3D" parent="hobo_goodrig/Skeleton3D/PhysicalBoneSimulator3D"]
transform = Transform3D(1, 2.50072e-11, 3.8485e-12, 2.3221e-12, 0.0607542, -0.998153, -2.51948e-11, 0.998153, 0.0607542, 0.00994938, 1.53232, -0.0253711)
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.22668e-13, 6.22376e-07, 0.171944)
body_offset = Transform3D(1, -4.84764e-12, -7.134e-13, 7.02563e-17, 0, -1, -3.46945e-18, 0.99999, -3.57628e-06, 0, 0.171944, -7.45058e-09)
bone_name = "Chest"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="hobo_goodrig/Skeleton3D/PhysicalBoneSimulator3D/Physical Bone Chest"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_6ffpc")

[node name="Physical Bone Neck" type="PhysicalBone3D" parent="hobo_goodrig/Skeleton3D/PhysicalBoneSimulator3D"]
transform = Transform3D(0.999989, 0.00367389, 0.00277777, 0.00367386, -0.272518, -0.962144, -0.00277782, 0.962144, -0.272529, 0.00984097, 1.7415, -0.0251824)
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.55896e-09, -1.47706e-07, 0.0390248)
body_offset = Transform3D(1, 6.63567e-08, -2.13622e-08, -6.69388e-09, -2.98023e-08, -1, 0, 0.99999, 3.78489e-06, -3.72529e-09, 0.0390248, 0)
bone_name = "Neck"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="hobo_goodrig/Skeleton3D/PhysicalBoneSimulator3D/Physical Bone Neck"]
transform = Transform3D(1, 5.82077e-11, 0, 0, 0, 1, 1.16415e-10, -1, -2.98023e-08, 0.000294548, -0.0218489, -0.0771391)
shape = SubResource("CapsuleShape3D_2hi47")

[node name="Physical Bone Arm_Upper_L" type="PhysicalBone3D" parent="hobo_goodrig/Skeleton3D/PhysicalBoneSimulator3D"]
transform = Transform3D(0.239515, 0.272494, -0.931869, 0.272494, 0.902361, 0.333904, 0.931869, -0.333904, 0.141876, 0.317146, 1.62624, -0.0544021)
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.04658e-07, -1.62858e-07, 0.137474)
body_offset = Transform3D(0.999992, 8.49366e-06, -1.92225e-06, 4.47035e-08, -4.84288e-08, -1, 0, 0.999999, 1.18464e-06, 5.96046e-08, 0.137474, 0)
bone_name = "Arm_Upper.L"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="hobo_goodrig/Skeleton3D/PhysicalBoneSimulator3D/Physical Bone Arm_Upper_L"]
transform = Transform3D(1, 2.98023e-08, 5.96046e-08, -5.96046e-08, 7.45058e-09, 1, 1.49012e-08, -1, -3.72529e-09, 0.0350689, -0.009794, -0.253389)
shape = SubResource("CapsuleShape3D_q71kv")

[node name="Physical Bone Hand_IK_L" type="PhysicalBone3D" parent="hobo_goodrig/Skeleton3D/PhysicalBoneSimulator3D"]
transform = Transform3D(1, -2.32204e-12, 2.51945e-11, 2.32203e-12, 1, 6.29575e-07, -2.51945e-11, -6.29575e-07, 1, 0.854627, 1.45078, -0.0514528)
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.63685e-19, -7.59395e-14, 3.3528e-08)
body_offset = Transform3D(1, 4.17642e-13, -4.88204e-12, -2.98778e-21, 1, 2.26496e-06, -3.46945e-18, -5.68434e-14, 0.99999, 0, 0, -3.35276e-08)
mass = 0.01
friction = 0.0
bone_name = "Hand_IK.L"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="hobo_goodrig/Skeleton3D/PhysicalBoneSimulator3D/Physical Bone Hand_IK_L"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_8qecj")

[node name="Physical Bone Arm_Upper_R" type="PhysicalBone3D" parent="hobo_goodrig/Skeleton3D/PhysicalBoneSimulator3D"]
transform = Transform3D(0.239515, -0.272495, 0.931869, -0.272494, 0.902361, 0.333905, -0.931869, -0.333904, 0.141876, -0.282323, 1.62624, -0.0544022)
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.92018e-07, -2.22778e-07, 0.137474)
body_offset = Transform3D(0.999991, -8.40425e-06, 1.90735e-06, 2.98023e-08, 3.12924e-07, -1, -2.98023e-08, 0.999999, 1.6205e-06, 2.98023e-08, 0.137474, 0)
bone_name = "Arm_Upper.R"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="hobo_goodrig/Skeleton3D/PhysicalBoneSimulator3D/Physical Bone Arm_Upper_R"]
transform = Transform3D(1, 1.49012e-08, -2.98023e-08, -2.98023e-08, 7.45058e-08, 1, 0, -1, -7.45058e-09, -0.0318775, -0.00779474, -0.227723)
shape = SubResource("CapsuleShape3D_uylrq")

[node name="Physical Bone Hand_IK_R" type="PhysicalBone3D" parent="hobo_goodrig/Skeleton3D/PhysicalBoneSimulator3D"]
transform = Transform3D(1, -2.32204e-12, 2.51945e-11, 2.32203e-12, 1, 6.29574e-07, -2.51945e-11, -6.29574e-07, 1, -0.819805, 1.45078, -0.0514528)
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.18246e-19, -1.01419e-13, 4.4704e-08)
body_offset = Transform3D(1, 4.17642e-13, -4.88203e-12, -9.68298e-20, 1, 2.26869e-06, 0, 1.13687e-13, 0.999989, 0, 0, -4.47035e-08)
mass = 0.01
friction = 0.0
bone_name = "Hand_IK.R"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="hobo_goodrig/Skeleton3D/PhysicalBoneSimulator3D/Physical Bone Hand_IK_R"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_54thh")

[node name="Physical Bone Leg_IK_L" type="PhysicalBone3D" parent="hobo_goodrig/Skeleton3D/PhysicalBoneSimulator3D"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0.234685, 0.207721, -0.0262585)
joint_type = 1
bone_name = "Leg_IK.L"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="hobo_goodrig/Skeleton3D/PhysicalBoneSimulator3D/Physical Bone Leg_IK_L"]
transform = Transform3D(0.955901, 0.29369, 0, 0, 0, 1, 0.29369, -0.955901, 0, -0.0667786, 0, 0.320091)
shape = SubResource("CapsuleShape3D_js8s8")

[node name="Physical Bone Foot_L" type="PhysicalBone3D" parent="hobo_goodrig/Skeleton3D/PhysicalBoneSimulator3D"]
transform = Transform3D(0.880324, 0.409032, -0.240254, 0.409032, -0.398006, 0.821148, 0.240254, -0.821148, -0.517681, 0.251943, 0.148737, 0.0109267)
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.63936e-08, -5.78218e-09, 0.0718304)
body_offset = Transform3D(1, 1.49012e-08, -4.47035e-08, -6.70552e-08, -1.49012e-07, -1, 2.98023e-08, 1, -1.78814e-07, 5.96046e-08, 0.0718304, 1.86265e-08)
bone_name = "Foot.L"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="hobo_goodrig/Skeleton3D/PhysicalBoneSimulator3D/Physical Bone Foot_L"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_p4nxa")

[node name="Physical Bone Leg_IK_R" type="PhysicalBone3D" parent="hobo_goodrig/Skeleton3D/PhysicalBoneSimulator3D"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, -0.214786, 0.207721, -0.0262585)
joint_type = 1
bone_name = "Leg_IK.R"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="hobo_goodrig/Skeleton3D/PhysicalBoneSimulator3D/Physical Bone Leg_IK_R"]
transform = Transform3D(0.988597, -0.150588, 0, 0, 0, 1, -0.150588, -0.988597, 0, 0.0346019, 0, 0.336365)
shape = SubResource("CapsuleShape3D_bv3yq")

[node name="Physical Bone Foot_R" type="PhysicalBone3D" parent="hobo_goodrig/Skeleton3D/PhysicalBoneSimulator3D"]
transform = Transform3D(0.880324, -0.409032, 0.240254, -0.409032, -0.398006, 0.821148, -0.240254, -0.821148, -0.517681, -0.232044, 0.148737, 0.0109267)
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.39146e-08, -6.33831e-09, 0.0718304)
body_offset = Transform3D(1, 1.49012e-08, -1.93715e-07, -1.93715e-07, -8.9407e-08, -1, -2.98023e-08, 1, -1.19209e-07, 0, 0.0718304, 1.49012e-08)
bone_name = "Foot.R"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="hobo_goodrig/Skeleton3D/PhysicalBoneSimulator3D/Physical Bone Foot_R"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_c1s63")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="RagdollTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="RagdollTimer" to="." method="_on_ragdolltimer_timeout"]

[editable path="EnvironmentCollision/DesertEaglePS1"]
[editable path="hobo_goodrig"]
